# langchain_document_assistant

./: README.md  env.txt  frontend.py  pyproject.toml
backend/: constant.py  crawl_ingest_data.py  main.py
